--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "jszip": "^3.7.1",
     "next": "11.1.2",
     "pdf-lib": "^1.17.0",
     "react": "17.0.2",
