--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jszip": "^3.7.1",
     "next": "11.1.2",
     "pdf-lib": "^1.17.0",
+    "pdfjs-dist": "^2.10.377",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-sortable-hoc": "^2.0.0"
