--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pdfjs-dist": "^2.10.377",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-sortable-hoc": "^2.0.0"
+    "react-sortable-hoc": "^2.0.0",
+    "react-top-loading-bar": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "8.0.1",
