--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jszip": "^3.7.1",
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
+    "pdf-actions": "^1.0.4",
     "pdf-lib": "^1.17.0",
     "pdfjs-dist": "^2.10.377",
     "react": "17.0.2",
