--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PDFTools",
-  "short_name": "PDFTools",
+  "name": "PDFActions",
+  "short_name": "PDFActions",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
