--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "pdfjs-dist": "^2.10.377",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-easy-sort": "^1.5.0",
     "react-sortable-hoc": "^2.0.0",
     "react-top-loading-bar": "^2.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
