--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
     "clsx": "^2.1.0",
+    "framer-motion": "^10.17.9",
     "negotiator": "^0.6.3",
     "next": "14.0.4",
     "react": "^18",
