--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "sharp": "^0.33.1",
     "tailwind-merge": "^2.2.0"
   },
