--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.17.9",
     "negotiator": "^0.6.3",
     "next": "14.0.4",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
