--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
+    "array-move": "^4.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^10.17.9",
     "negotiator": "^0.6.3",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-easy-sort": "^1.6.0",
     "sharp": "^0.33.1",
     "tailwind-merge": "^2.2.0"
   },
